DevOps/vagrant/lab/VAGRANT-lab-minikube/kubeconfig/grafana-ingress-tls.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana-ingress
  namespace: monitoring
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
  - hosts:
    - grafana.chris.org
    secretName: grafana-tls
  rules:
  - host: grafana.chris.org
    http:
      paths:
      - pathType: ImplementationSpecific
        backend:
          service:
            name: prometheus-grafana
            port:
              number: 80
